// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Widget default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.875em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 0em;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Officia sed corrupti laboriosam voluptatem iste. Sed harum reprehenderit tempore optio. Cum laudantium est sequi natus quae ea et. Distinctio recusandae quo mollitia est reiciendis sunt. Fuga quod non eaque sequi voluptas. Occaecati quia consequatur.
 
Ut sed aut assumenda quo. Sed unde repellendus. Quam est est non odit architecto omnis ad quas. Ipsam voluptas repudiandae animi nihil fugiat omnis eveniet et aut. Repellat qui eos veniam quasi aut architecto et. Sed ut eius.
 
Voluptas eum nobis recusandae. Nostrum ut quis ex quos aliquam. Voluptates mollitia est.
 
Consequatur praesentium aperiam. Nobis doloremque optio rerum vero. Quam sit dolor quibusdam quo quia accusantium nemo aspernatur. At reiciendis nihil cupiditate deleniti tenetur qui necessitatibus rerum sint. Quis sit impedit in blanditiis ut. Quod doloribus perspiciatis est minus suscipit animi.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget no padding 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 0em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 1.875em;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Amet modi non est esse ut et numquam recusandae mollitia. Ea eos repudiandae a. A recusandae eaque et inventore nostrum consequatur et enim.
 
Voluptate exercitationem qui. Rerum tenetur nam voluptatum sit. Qui quas qui facilis itaque. Nihil possimus odio.
 
Nulla perferendis necessitatibus vel eum rerum dignissimos in aut. Tempora explicabo ut perspiciatis veniam ducimus et est necessitatibus perspiciatis. Eligendi sequi assumenda aut quis harum ea non natus nisi. Nesciunt totam dignissimos dolores vitae ut dolorem amet velit deserunt. Assumenda sunt quam officiis eos et quos et. Aperiam sed sint facilis eos consequuntur.
 
Aut voluptatem magnam ut modi dolorem quae saepe aut. Quos dicta quae aliquam minima ea rerum facilis exercitationem minima. Suscipit deserunt quos vel enim. Corrupti dolores perspiciatis harum consequatur aliquid nisi quis. Dolores neque itaque sed aut. Itaque eos amet fugiat recusandae ex itaque quas.
    </p>
  </div>
</div>
`;
